--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^4.2.0",
     "dexie": "^4.0.10",
     "dexie-react-hooks": "^1.1.7",
+    "jose": "^5.9.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
